--- a/.github/workflows/playwright_tests.yml
+++ b/.github/workflows/playwright_tests.yml
@@ -23,25 +23,19 @@ jobs:
       with:
         dotnet-version: '9.0.x' # Substitua pela versão do .NET que está usando
 
-    # 3. Configurar Node.js (necessário para o Playwright)
-    - name: Setup Node.js
-      uses: actions/setup-node@v3
-      with:
-        node-version: '18' # Recomendado para Playwright
-
-    # 4. Restaurar dependências do projeto
+    # 3. Restaurar dependências do projeto
     - name: Restore dependencies
       run: dotnet restore
 
-    # 5. Instalar navegadores do Playwright
-    - name: Install Playwright Browsers
+    # 4. Instalar navegadores do Playwright
+    - name: Install Playwright browsers
       run: npx playwright install
 
-    # 6. Executar os testes
+    # 5. Executar os testes
     - name: Run Playwright tests
       run: dotnet test --filter "(Category=VehicleData) | (Category=InsurantData)"
 
-    # 7. (Opcional) Capturar relatórios de testes
+    # 6. (Opcional) Capturar relatórios de testes
     - name: Upload Test Results
       if: always()
       uses: actions/upload-artifact@v3
@@ -49,6 +43,7 @@ jobs:
         name: test-results
         path: '**/TestResults/*.trx'
 
-    # 8. Configurar o ambiente para não capturar tela na pipeline
+    # 7. NÃO capturar tela
     - name: Setup environment
       run: echo "CI=true" >> $GITHUB_ENV
+
