--- a/.github/workflows/playwright_tests.yml
+++ b/.github/workflows/playwright_tests.yml
@@ -21,11 +21,16 @@ jobs:
     - name: Setup .NET
       uses: actions/setup-dotnet@v3
       with:
-        dotnet-version: '9.0.x' # Substitua pela versão do .NET que está usando
+        dotnet-version: '9.0.x'
 
     # 3. Configurar a fonte do NuGet
     - name: Setup NuGet source
-      run: dotnet nuget add source --name nuget.org https://api.nuget.org/v3/index.json
+      run: |
+        if [ $(dotnet nuget list source | grep -c "https://api.nuget.org/v3/index.json") -eq 0 ]; then
+          dotnet nuget add source --name nuget.org https://api.nuget.org/v3/index.json
+        else
+          echo "NuGet source 'nuget.org' já está configurada."
+        fi
 
     # 4. Restaurar dependências do projeto
     - name: Restore dependencies
@@ -42,15 +47,3 @@ jobs:
     # 7. Executar os testes
     - name: Run Playwright tests
       run: dotnet test --filter "(Category=VehicleData) | (Category=InsurantData)"
-
-    # 8. (Opcional) Capturar relatórios de testes
-    - name: Upload Test Results
-      if: always()
-      uses: actions/upload-artifact@v3
-      with:
-        name: test-results
-        path: '**/TestResults/*.trx'
-
-    # 9. Configurar ambiente CI
-    - name: Setup environment
-      run: echo "CI=true" >> $GITHUB_ENV
